Setup of html for navigation
- Html layout for navigation
- Starting CSS now

--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
 
 <body>
     <div class="container">
+        <header>
+            <!-- Start of navigation -->
+            <nav>
+                <a href="index.html"><img src="img/lambda-black.png" alt="Lambda Logo"></a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="#">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </nav>
+            <!-- End of navigation -->
+
+            <!-- Start of hero image -->
+            <img src="img/jumbo.jpg" alt="Time lapse image of a highway at night, headlights and taillights from vehicles look like a river of red and white light">
+            <!-- End of hero image -->
+        </header>
    
         <section class="top-content">
             <div class="text-container">
