--- a/about.html
+++ b/about.html
@@ -27,59 +27,62 @@
       <!-- End of navigation -->
 
       <!-- Start of hero image -->
-      <img class="header-hero" src="img/jumbo.jpg"
+      <img class="header-hero" src="img/jumbo-about.png"
         alt="Skyline in either dusk or dawn light showcasing many large skyscrapers, exact city is unknown">
       <!-- End of hero image -->
     </header>
 
-    About
+    <section class="top-content">
+        <div class="one-column-content__about">
+          <h2>About</h2>
+          <p> Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+        </div>
+    </section>
 
-    Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate
-    strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world
-    view of disruptive innovation via workplace diversity and empowerment.
+    <section class="about-middle-section">
 
+      <!-- Start of card 1 -->
+      <div class="about__card">
+          <img src="img/about-plan.png" alt="strategy">
+          <h2>Strategy</h2>
+          <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <a href="#">Learn More</a>
+      </div>
+      <!-- End of card 1 -->
 
-    <img src="img/about-plan.png" alt="strategy">
+      <!-- Start of card 2 -->
+      <div class="about__card">
+          <img src="img/about-working.png" alt="strategy">
+          <h2>How We Work</h2>
+          <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <a href="#">Learn More</a>
+      </div>
+      <!-- End of card 2 -->
 
-    Strategy
+      <!-- Start of card 3 -->
+      <div class="about__card">
+          <img src="img/about-office.png" alt="strategy">
+          <h2>Places We Work</h2>
+          <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <a href="#">Learn More</a>
+      </div>
+      <!-- End of card 3 -->
 
-    Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
+      <!-- Start of card 4 -->
+      <div class="about__card">
+          <img src="img/about-meeting.png" alt="strategy">
+          <h2>Collaboration</h2>
+          <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <a href="#">Learn More</a>
+      </div>
+      <!-- End of card 4 -->
 
-    Learn More
+    </section>
 
-
-
-    <img src="img/about-working.png" alt="strategy">
-
-    How We Work
-
-    Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
-
-    Learn More
-
-
-
-    <img src="img/about-office.png" alt="strategy">
-
-    Places We Work
-
-    Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
-
-    Learn More
-
-    <img src="img/about-meeting.png" alt="strategy">
-
-    Collaboration
-
-    Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
-
-    Learn More
-
-    Let's Work Together
-
-    Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate
-    strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world
-    view of disruptive innovation via workplace diversity and empowerment.
+    <section class="bottom-about">
+      <h2>Let's Work Together</h2>
+      <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+    </section>
 
     <footer>
       <nav>
